--- a/resume.html
+++ b/resume.html
@@ -28,7 +28,8 @@
     <h2>Portfolio</h2>
       <h3>GitHub: <a href="https://github.com/Rahul2k20" target="_blank">https://github.com/Rahul2k20</a></h3>
       <br>
-    <a href="Final Resume.docx" download><button>Download Resume</button></a>
+    <a href="Final Resume.docx" download><button class="btn">Download Resume</button></a>
+
 
     <h2>Education</h2>
 
