--- a/resume.html
+++ b/resume.html
@@ -42,7 +42,7 @@
     <h5>June 2019 - July 2019</h5>
       <ul>
         <li>Worked on SQL Server Management Studio & Microsoft Power BI</li>
-        <li>Generatd a comprehensive, annual sales report</li>
+        <li>Generated a comprehensive, annual sales report</li>
       </ul>
 
     <h3>Campus Ambassador/Student Partner</h3>
