--- a/index.html
+++ b/index.html
@@ -61,9 +61,6 @@
 
 				        <p>Hey there! I'm Rahul Nagarajan from Tamil Nadu, India. I am a final year college student (8.5 CGPA, B.TECH in Computer Science & Engineering) at SRM Institute of Science & Technology.</p>
 					<p> During the course of my academic career, I also managed to accrue nearly 5 months of work experience. I had the privilege of working for AEGIS INFO BUSINESS SOLUTIONS PVT. LTD. as a business analyst, where I learned valuable professional skills such as problem solving and business intelligence. I also worked for Internshala (ISP 17) as a student partner/campus ambassador where I successfully marketed Internshala’s platform and associated products. I also bagged several performance-based rewards and cash incentives. I'm currently working for Zolo Stays as a sales intern. In both my academic and professional life, I have been consistently praised as hard-working by my professors and peers. Whether working on academic, extracurricular, or professional projects, I apply proven communication, lucrative thinking and leadership skills to get the job done effectively.</p>
-					<br>
-
-          <a href="Final Resume.docx" download><button class="btn">Download Resume</button></a>
 
 				</div>
 
@@ -159,8 +156,77 @@
 							</div>
 
 							<div class="squareContent">
-								<h2>124</h2>
+								<h2 class="counter">5</h2>
+								<h3>Months Experience</h3>
+							</div>
+
+						</div>
+
+
+					</div>
+
+				</div>
+
+				<div class="col-md-3 col-sm-6">
+
+					<div class="squareItem">
+
+
+						<div class="squareInnerContainer">
+
+							<div class="squareIcon">
+								<i class="fa fa-calendar"></i>
+							</div>
+
+							<div class="squareContent">
+								<h2 class="counter">10</h2>
 								<h3>Clients</h3>
+							</div>
+
+						</div>
+
+
+					</div>
+
+				</div>
+
+				<div class="col-md-3 col-sm-6">
+
+					<div class="squareItem">
+
+
+						<div class="squareInnerContainer">
+
+							<div class="squareIcon">
+								<i class="fa fa-bolt"></i>
+							</div>
+
+							<div class="squareContent">
+								<h2 class="counter">5</h2>
+								<h3>Projects</h3>
+							</div>
+
+						</div>
+
+
+					</div>
+
+				</div>
+
+				<div class="col-md-3 col-sm-6">
+
+					<div class="squareItem">
+
+
+						<div class="squareInnerContainer">
+
+							<div class="squareIcon">
+								<i class="fa fa-cloud"></i>
+							</div>
+
+							<div class="squareContent">
+								<h2 class="counter">2</h2>
+								<h3>Websites Made</h3>
 							</div>
 
 						</div>
@@ -177,10 +243,21 @@
 
 	</div>
 
+	<div id="contact" class="contactSection section">
+
+		<div class="col-md-12 text-center">
+
+			<p class="subHeading">Like what you see?</p>
+			<h2>I'd love to hear from you!</h2>
+			<a href="mailTo:reece@gmail.com" class="contactButton">GET IN TOUCH!</a>
+
+		</div>
+
+	</div>
 
 
-
-
+	<script src="js/countUp.js"></script>
+	<script src="js/countUp-jquery.js"></script>
 	<script src="js/jquery.superslides.min.js"></script>
 	<script src="js/jquery.easypiechart.min.js"></script>
 	<script src="js/owl.carousel.min.js"></script>
