--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 
 			<p class="subHeading">Like what you see?</p>
 			<h2>I'd love to hear from you!</h2>
-			<a href="mailTo:reece@gmail.com" class="contactButton">GET IN TOUCH!</a>
+			<a href="mailTo:additya.nagarajan@gmail.com" class="contactButton">GET IN TOUCH!</a>
 
 		</div>
 
