--- a/index.html
+++ b/index.html
@@ -2,18 +2,26 @@
 <html>
 <head>
 	<title>My Portfolio</title>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="stylesheet" type="text/css" href="css/superslides.css">
 	<link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
+
+	<div class="loader">
+
+		<div class="inner">
+		</div>
+
+	</div>
 
 	<div id="slides">
 
@@ -40,6 +48,34 @@
 
 
 	</div>
+
+	<nav id="navigation" class="navbar navbar-expand-lg">
+	  <a class="navbar-brand" href="#">Welcome</a>
+
+	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+	    <span class="navbar-toggler-icon"></span>
+	  </button>
+
+	  <div class="collapse navbar-collapse" id="navbarNav">
+
+	    <ul class="navbar-nav">
+	      <li class="nav-item active">
+	        <a class="nav-link" href="#about">About <span class="sr-only">(current)</span></a>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link" href="#skills">Skills</a>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link" href="#stats">Stats</a>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">disabled</a>
+	      </li>
+	    </ul>
+
+	  </div>
+
+  </nav>
 
 
 
@@ -255,6 +291,173 @@
 
 	</div>
 
+	<div id="portfolio" class="section">
+
+		<div class="container">
+
+			<div class="row">
+
+				<div class="heading">
+					<h2>PORTFOLIO</h2>
+				</div>
+				<div class="filter">
+					<ul id="filters">
+						<li> <a href="#" data-filter="*" class="current">ALL</a> </li>
+						<li> <a href="#" data-filter=".projects">Projects</a> </li>
+						<li> <a href="#" data-filter=".me">Me</a> </li>
+						<li> <a href="#" data-filer=".websites">Websites</a> </li>
+
+				 </ul>
+
+				</div>
+
+		<div class="itemsContainer">
+	   <ul class="items">
+
+		<li onclick="" class="projects col-xs-6 col-sm-4 col-md-3 col-lg-3">
+			<div class="item">
+				<img src="img/portfolio/thumbnails/Sachin-Squared.PNG">
+					<div class="icons">
+						<a href="img/portfolio/Sachin.jpg" title="View image" class="openButton" data-fancybox data-caption="This is a picture of me with the Legendary Cricketer, Sachin Tendulkar">
+							<i class="fa fa-search"></i>
+						</a>
+
+						<a href="" target="_blank" class="projectLink">
+							<i class="fa fa-link"></i>
+						</a>
+					</div>
+
+							<div class="imageOverlay"></div>
+
+				</div>
+
+				</li>
+
+			<li onclick="" class="projects col-xs-6 col-sm-4 col-md-3 col-lg-3">
+				<div class="item">
+					<img src="img/portfolio/thumbnails/Sachin-Squared.PNG">
+						<div class="icons">
+							<a href="img/portfolio/Sachin.jpg" title="View image" class="openButton" data-fancybox data-caption="This is a picture of me with the Legendary Cricketer, Sachin Tendulkar">
+								<i class="fa fa-search"></i>
+							</a>
+
+							<a href="" target="_blank" class="projectLink">
+								<i class="fa fa-link"></i>
+							</a>
+						</div>
+                    <div class="imageOverlay"></div>
+					</div>
+					</li>
+
+			<li onclick="" class="me col-xs-6 col-sm-4 col-md-3 col-lg-3">
+				<div class="item">
+					<img src="img/portfolio/thumbnails/Sachin-Squared.PNG">
+						<div class="icons">
+							<a href="img/portfolio/Sachin.jpg" title="View image" class="openButton" data-fancybox data-caption="This is a picture of me with the Legendary Cricketer, Sachin Tendulkar">
+								<i class="fa fa-search"></i>
+							</a>
+
+							<a href="" target="_blank" class="projectLink">
+								<i class="fa fa-link"></i>
+							</a>
+						</div>
+                  <div class="imageOverlay"></div>
+
+						</div>
+					</li>
+
+				<li onclick="" class="me col-xs-6 col-sm-4 col-md-3 col-lg-3">
+					<div class="item">
+						<img src="img/portfolio/thumbnails/Sachin-Squared.PNG">
+							<div class="icons">
+								<a href="img/portfolio/Sachin.jpg" title="View image" class="openButton" data-fancybox data-caption="This is a picture of me with the Legendary Cricketer, Sachin Tendulkar">
+									<i class="fa fa-search"></i>
+								</a>
+
+								<a href="" target="_blank" class="projectLink">
+									<i class="fa fa-link"></i>
+								</a>
+
+							</div>
+
+							<div class="imageOverlay"></div>
+
+						</div>
+						</li>
+
+			<li onclick="" class="projects col-xs-6 col-sm-4 col-md-3 col-lg-3">
+				<div class="item">
+					<img src="img/portfolio/thumbnails/Sachin-Squared.PNG">
+						<div class="icons">
+							<a href="img/portfolio/Sachin.jpg" title="View image" class="openButton" data-fancybox data-caption="This is a picture of me with the Legendary Cricketer, Sachin Tendulkar">
+								<i class="fa fa-search"></i>
+							</a>
+
+							<a href="" target="_blank" class="projectLink">
+								<i class="fa fa-link"></i>
+							</a>
+						</div>
+
+						 <div class="imageOverlay"></div>
+
+						</div>
+					</li>
+
+		<li onclick="" class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3">
+			<div class="item">
+				<img src="img/portfolio/thumbnails/Sachin-Squared.PNG">
+					<div class="icons">
+						<a href="img/portfolio/Sachin.jpg" title="View image" class="openButton" data-fancybox data-caption="This is a picture of me with the Legendary Cricketer, Sachin Tendulkar">
+							<i class="fa fa-search"></i>
+						</a>
+
+						<a href="" target="_blank" class="projectLink">
+							<i class="fa fa-link"></i>
+						</a>
+					</div>
+
+					<div class="imageOverlay"></div>
+
+					</div>
+				</li>
+
+		<li onclick="" class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3">
+			<div class="item">
+				<img src="img/portfolio/thumbnails/Sachin-Squared.PNG">
+					<div class="icons">
+						<a href="img/portfolio/Sachin.jpg" title="View image" class="openButton" data-fancybox data-caption="This is a picture of me with the Legendary Cricketer, Sachin Tendulkar">
+							<i class="fa fa-search"></i>
+						</a>
+
+						<a href="" target="_blank" class="projectLink">
+							<i class="fa fa-link"></i>
+						</a>
+					</div>
+
+					<div class="imageOverlay"></div>
+
+					</div>
+				</li>
+
+
+				  </ul>
+
+				</div>
+
+			</div>
+
+		</div>
+
+	</div>
+
+	<div class="copyrightSection">
+
+		<div class="col-md-12 text-center">
+			<p>&copy; Copyright Rahul Nagarajan 2020</p>
+		<div>
+
+	</div>
+
 
 	<script src="js/countUp.js"></script>
 	<script src="js/countUp-jquery.js"></script>
@@ -264,7 +467,8 @@
 	<script src="js/typed.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
+	<script type="text/javascript" src="https://unpkg.com/isotope-layout@3.0.6/dist/isotope.pkgd.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 	<script src="js/script.js"></script>
 
 </body>
