--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<title>My Portfolio</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
 	<link rel="stylesheet" type="text/css" href="css/superslides.css">
 	<link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -49,7 +50,7 @@
 	</div>
 
 	<nav id="navigation" class="navbar navbar-expand-lg">
-	  <a class="navbar-brand" href="#">Welcome</a>
+	  <a class="navbar-brand" href="#">HOME</a>
 
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
@@ -59,17 +60,19 @@
 
 	    <ul class="navbar-nav">
 	      <li class="nav-item active">
-	        <a class="nav-link" href="#about">About <span class="sr-only">(current)</span></a>
+	        <a class="nav-link" href="#about">ABOUT <span class="sr-only">(current)</span></a>
 	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link" href="#skills">Skills</a>
+	        <a class="nav-link" href="#skills">SKILLS</a>
 	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link" href="#stats">Stats</a>
+	        <a class="nav-link" href="#stats">STATS</a>
 	      </li>
-	      <li class="nav-item">
-	        <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">disabled</a>
-	      </li>
+			 <li class="nav-item">
+				 <a class="nav-link" href="#contact">CONTACT</a>
+	     <li class="nav-item">
+		<a class="nav-link" href="#portfolio">PORTFOLIO</a>
+			</li>
 	    </ul>
 
 	  </div>
