--- a/index.html
+++ b/index.html
@@ -318,9 +318,9 @@
 
 		<li onclick="" class="projects col-xs-6 col-sm-4 col-md-3 col-lg-3">
 			<div class="item">
-				<img src="img/portfolio/thumbnails/Sachin-Squared.PNG">
+				<img src="">
 					<div class="icons">
-						<a href="img/portfolio/Sachin.jpg" title="View image" class="openButton" data-fancybox data-caption="This is a picture of me with the Legendary Cricketer, Sachin Tendulkar">
+						<a href="" title="View image" class="openButton" data-fancybox data-caption="">
 							<i class="fa fa-search"></i>
 						</a>
 
@@ -337,9 +337,9 @@
 
 			<li onclick="" class="projects col-xs-6 col-sm-4 col-md-3 col-lg-3">
 				<div class="item">
-					<img src="img/portfolio/thumbnails/Sachin-Squared.PNG">
+					<img src="">
 						<div class="icons">
-							<a href="img/portfolio/Sachin.jpg" title="View image" class="openButton" data-fancybox data-caption="This is a picture of me with the Legendary Cricketer, Sachin Tendulkar">
+							<a href="" title="View image" class="openButton" data-fancybox data-caption="">
 								<i class="fa fa-search"></i>
 							</a>
 
@@ -355,7 +355,7 @@
 				<div class="item">
 					<img src="img/portfolio/thumbnails/Sachin-Squared.PNG">
 						<div class="icons">
-							<a href="img/portfolio/Sachin.jpg" title="View image" class="openButton" data-fancybox data-caption="This is a picture of me with the Legendary Cricketer, Sachin Tendulkar">
+							<a href="" title="View image" class="openButton" data-fancybox data-caption="This is a picture of me with the Legendary Cricketer, Sachin Tendulkar">
 								<i class="fa fa-search"></i>
 							</a>
 
@@ -370,9 +370,9 @@
 
 				<li onclick="" class="me col-xs-6 col-sm-4 col-md-3 col-lg-3">
 					<div class="item">
-						<img src="img/portfolio/thumbnails/Sachin-Squared.PNG">
+						<img src="">
 							<div class="icons">
-								<a href="img/portfolio/Sachin.jpg" title="View image" class="openButton" data-fancybox data-caption="This is a picture of me with the Legendary Cricketer, Sachin Tendulkar">
+								<a href="" title="View image" class="openButton" data-fancybox data-caption="">
 									<i class="fa fa-search"></i>
 								</a>
 
@@ -389,9 +389,9 @@
 
 			<li onclick="" class="projects col-xs-6 col-sm-4 col-md-3 col-lg-3">
 				<div class="item">
-					<img src="img/portfolio/thumbnails/Sachin-Squared.PNG">
+					<img src="">
 						<div class="icons">
-							<a href="img/portfolio/Sachin.jpg" title="View image" class="openButton" data-fancybox data-caption="This is a picture of me with the Legendary Cricketer, Sachin Tendulkar">
+							<a href="" title="View image" class="openButton" data-fancybox data-caption="">
 								<i class="fa fa-search"></i>
 							</a>
 
@@ -407,9 +407,9 @@
 
 		<li onclick="" class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3">
 			<div class="item">
-				<img src="img/portfolio/thumbnails/Sachin-Squared.PNG">
+				<img src="">
 					<div class="icons">
-						<a href="img/portfolio/Sachin.jpg" title="View image" class="openButton" data-fancybox data-caption="This is a picture of me with the Legendary Cricketer, Sachin Tendulkar">
+						<a href="" title="View image" class="openButton" data-fancybox data-caption="">
 							<i class="fa fa-search"></i>
 						</a>
 
@@ -427,7 +427,7 @@
 			<div class="item">
 				<img src="img/portfolio/thumbnails/Sachin-Squared.PNG">
 					<div class="icons">
-						<a href="img/portfolio/Sachin.jpg" title="View image" class="openButton" data-fancybox data-caption="This is a picture of me with the Legendary Cricketer, Sachin Tendulkar">
+						<a href="" title="View image" class="openButton" data-fancybox data-caption="">
 							<i class="fa fa-search"></i>
 						</a>
 
