--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
 
 		<li onclick="" class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3">
 			<div class="item">
-				<img src="img/portfolio/thumbnails/Sachin-Squared.PNG">
+				<img src="">
 					<div class="icons">
 						<a href="" title="View image" class="openButton" data-fancybox data-caption="">
 							<i class="fa fa-search"></i>
