--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
 				<div class="item">
 					<img src="img/portfolio/thumbnails/Sachin-Squared.PNG">
 						<div class="icons">
-							<a href="" title="View image" class="openButton" data-fancybox data-caption="This is a picture of me with the Legendary Cricketer, Sachin Tendulkar">
+							<a href="img/portfolio/Sachin.jpg" title="View image" class="openButton" data-fancybox data-caption="This is a picture of me with the Legendary Cricketer, Sachin Tendulkar">
 								<i class="fa fa-search"></i>
 							</a>
 
