--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>My Portfolio</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="stylesheet" type="text/css" href="css/superslides.css">
 	<link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
@@ -14,6 +15,7 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
+
 <body>
 
 	<div class="loader">
@@ -28,9 +30,9 @@
 		<div class="overlay"></div>
 
 		<div class="slides-container">
-		    <img src="img/slide1.jpg" alt="">
-		    <img src="img/slide2.jpeg" alt="">
-		    <img src="img/slide3.jpeg" alt="">
+			<img src="img/slide1.jpg" alt="">
+			<img src="img/slide2.jpeg" alt="">
+			<img src="img/slide3.jpeg" alt="">
 		</div>
 
 		<div class="titleMessage">
@@ -42,42 +44,42 @@
 
 
 		<nav class="slides-navigation">
-		    <a href="#" class="next"></a>
-		    <a href="#" class="prev"></a>
+			<a href="#" class="next"></a>
+			<a href="#" class="prev"></a>
 		</nav>
 
 
 	</div>
 
 	<nav id="navigation" class="navbar navbar-expand-lg">
-	  <a class="navbar-brand" href="#">HOME</a>
+		<a class="navbar-brand" href="#">HOME</a>
 
-	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-	    <span class="navbar-toggler-icon"></span>
-	  </button>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
 
-	  <div class="collapse navbar-collapse" id="navbarNav">
+		<div class="collapse navbar-collapse" id="navbarNav">
 
-	    <ul class="navbar-nav">
-	      <li class="nav-item active">
-	        <a class="nav-link" href="#about">ABOUT <span class="sr-only">(current)</span></a>
-	      </li>
-	      <li class="nav-item">
-	        <a class="nav-link" href="#skills">SKILLS</a>
-	      </li>
-	      <li class="nav-item">
-	        <a class="nav-link" href="#stats">STATS</a>
-	      </li>
-			 <li class="nav-item">
-				 <a class="nav-link" href="#contact">CONTACT</a>
-	     <li class="nav-item">
-		<a class="nav-link" href="#portfolio">PORTFOLIO</a>
-			</li>
-	    </ul>
+			<ul class="navbar-nav">
+				<li class="nav-item active">
+					<a class="nav-link" href="#about">ABOUT <span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#skills">SKILLS</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#stats">STATS</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#contact">CONTACT</a>
+				<li class="nav-item">
+					<a class="nav-link" href="#portfolio">PORTFOLIO</a>
+				</li>
+			</ul>
 
-	  </div>
+		</div>
 
-  </nav>
+	</nav>
 
 
 
@@ -97,8 +99,11 @@
 
 					<h4>My name is Rahul Nagarajan</h4>
 
-				        <p>Hey there! I'm Rahul Nagarajan from Tamil Nadu, India. I am a final year college student (8.5 CGPA, B.TECH in Computer Science & Engineering) at SRM Institute of Science & Technology.</p>
-					<p> During the course of my academic career, I also managed to accrue nearly 5 months of work experience. I had the privilege of working for AEGIS INFO BUSINESS SOLUTIONS PVT. LTD. as a business analyst, where I learned valuable professional skills such as problem solving and business intelligence. I also worked for Internshala (ISP 17) as a student partner/campus ambassador where I successfully marketed Internshala’s platform and associated products. I also bagged several performance-based rewards and cash incentives. I'm currently working for Zolo Stays as a sales intern. In both my academic and professional life, I have been consistently praised as hard-working by my professors and peers. Whether working on academic, extracurricular, or professional projects, I apply proven communication, lucrative thinking and leadership skills to get the job done effectively.</p>
+					<p>Hey there! I'm Rahul Nagarajan from Tamil Nadu, India. I am a final year college student (8.5 CGPA, B.TECH in Computer Science & Engineering) at SRM Institute of Science & Technology.</p>
+					<p> During the course of my academic career, I also managed to accrue nearly 5 months of work experience. I had the privilege of working for AEGIS INFO BUSINESS SOLUTIONS PVT. LTD. as a business analyst, where I learned valuable
+						professional skills such as problem solving and business intelligence. I also worked for Internshala (ISP 17) as a student partner/campus ambassador where I successfully marketed Internshala’s platform and associated products. I also
+						bagged several performance-based rewards and cash incentives. I'm currently working for Zolo Stays as a sales intern. In both my academic and professional life, I have been consistently praised as hard-working by my professors and peers.
+						Whether working on academic, extracurricular, or professional projects, I apply proven communication, lucrative thinking and leadership skills to get the job done effectively.</p>
 
 				</div>
 
@@ -124,45 +129,45 @@
 
 				<div class="owl-carousel owl-theme">
 
-				    <div class="skill">
-				    	<span class="chart" data-percent="48">
-				    		<span class="percent">48</span>
-				    		<canvas height="152" width="152"></canvas>
-				    	</span>
-				    	<h4>C++</h4>
-				    	<p>Novice Competitive Programmer</p>
-				    </div>
+					<div class="skill">
+						<span class="chart" data-percent="48">
+							<span class="percent">48</span>
+							<canvas height="152" width="152"></canvas>
+						</span>
+						<h4>C++</h4>
+						<p>Novice Competitive Programmer</p>
+					</div>
 
 
-				    <div class="skill">
-				    	<span class="chart" data-percent="90">
-				    		<span class="percent">90</span>
-				    		<canvas height="152" width="152"></canvas>
-				    	</span>
-				    	<h4>HTML</h4>
-				    	<p>Expert proficiency</p>
-				    </div>
+					<div class="skill">
+						<span class="chart" data-percent="90">
+							<span class="percent">90</span>
+							<canvas height="152" width="152"></canvas>
+						</span>
+						<h4>HTML</h4>
+						<p>Expert proficiency</p>
+					</div>
 
 
 
-				    <div class="skill">
-				    	<span class="chart" data-percent="80">
-				    		<span class="percent">80</span>
-				    		<canvas height="152" width="152"></canvas>
-				    	</span>
-				    	<h4>CSS</h4>
-				    	<p>High Proficiency</p>
-				    </div>
+					<div class="skill">
+						<span class="chart" data-percent="80">
+							<span class="percent">80</span>
+							<canvas height="152" width="152"></canvas>
+						</span>
+						<h4>CSS</h4>
+						<p>High Proficiency</p>
+					</div>
 
 
-            <div class="skill">
-				    	<span class="chart" data-percent="55">
-				    		<span class="percent">55</span>
-				    		<canvas height="152" width="152"></canvas>
-				    	</span>
-				    	<h4>Javascript</h4>
-				    	<p>Getting There!</p>
-				    </div>
+					<div class="skill">
+						<span class="chart" data-percent="55">
+							<span class="percent">55</span>
+							<canvas height="152" width="152"></canvas>
+						</span>
+						<h4>Javascript</h4>
+						<p>Getting There!</p>
+					</div>
 
 
 				</div>
@@ -309,140 +314,140 @@
 						<li> <a href="#" data-filter=".me">Me</a> </li>
 						<li> <a href="#" data-filer=".websites">Websites</a> </li>
 
-				 </ul>
+					</ul>
 
 				</div>
 
-		<div class="itemsContainer">
-	   <ul class="items">
+				<div class="itemsContainer">
+					<ul class="items">
 
-		<li onclick="" class="projects col-xs-6 col-sm-4 col-md-3 col-lg-3">
-			<div class="item">
-				<img src="">
-					<div class="icons">
-						<a href="" title="View image" class="openButton" data-fancybox data-caption="">
-							<i class="fa fa-search"></i>
-						</a>
+						<li onclick="" class="projects col-xs-6 col-sm-4 col-md-3 col-lg-3">
+							<div class="item">
+								<img src="img/portfolio/thumbnails/Sachin-Squared.PNG">
+								<div class="icons">
+									<a href="img/portfolio/Sachin.jpg" title="View image" class="openButton" data-fancybox data-caption="This is a picture of me with the Legendary Cricketer, Sachin Tendulkar">
+										<i class="fa fa-search"></i>
+									</a>
 
-						<a href="" target="_blank" class="projectLink">
-							<i class="fa fa-link"></i>
-						</a>
-					</div>
+									<a href="" target="_blank" class="projectLink">
+										<i class="fa fa-link"></i>
+									</a>
+								</div>
 
-							<div class="imageOverlay"></div>
-
-				</div>
-
-				</li>
-
-			<li onclick="" class="projects col-xs-6 col-sm-4 col-md-3 col-lg-3">
-				<div class="item">
-					<img src="">
-						<div class="icons">
-							<a href="" title="View image" class="openButton" data-fancybox data-caption="">
-								<i class="fa fa-search"></i>
-							</a>
-
-							<a href="" target="_blank" class="projectLink">
-								<i class="fa fa-link"></i>
-							</a>
-						</div>
-                    <div class="imageOverlay"></div>
-					</div>
-					</li>
-
-			<li onclick="" class="me col-xs-6 col-sm-4 col-md-3 col-lg-3">
-				<div class="item">
-					<img src="img/portfolio/thumbnails/Sachin-Squared.PNG">
-						<div class="icons">
-							<a href="img/portfolio/Sachin.jpg" title="View image" class="openButton" data-fancybox data-caption="This is a picture of me with the Legendary Cricketer, Sachin Tendulkar">
-								<i class="fa fa-search"></i>
-							</a>
-
-							<a href="" target="_blank" class="projectLink">
-								<i class="fa fa-link"></i>
-							</a>
-						</div>
-                  <div class="imageOverlay"></div>
-
-						</div>
-					</li>
-
-				<li onclick="" class="me col-xs-6 col-sm-4 col-md-3 col-lg-3">
-					<div class="item">
-						<img src="">
-							<div class="icons">
-								<a href="" title="View image" class="openButton" data-fancybox data-caption="">
-									<i class="fa fa-search"></i>
-								</a>
-
-								<a href="" target="_blank" class="projectLink">
-									<i class="fa fa-link"></i>
-								</a>
+								<div class="imageOverlay"></div>
 
 							</div>
 
-							<div class="imageOverlay"></div>
-
-						</div>
 						</li>
 
-			<li onclick="" class="projects col-xs-6 col-sm-4 col-md-3 col-lg-3">
-				<div class="item">
-					<img src="">
-						<div class="icons">
-							<a href="" title="View image" class="openButton" data-fancybox data-caption="">
-								<i class="fa fa-search"></i>
-							</a>
+						<li onclick="" class="projects col-xs-6 col-sm-4 col-md-3 col-lg-3">
+							<div class="item">
+								<img src="img/portfolio/thumbnails/Sachin-Squared.PNG">
+								<div class="icons">
+									<a href="img/portfolio/Sachin.jpg" title="View image" class="openButton" data-fancybox data-caption="This is a picture of me with the Legendary Cricketer, Sachin Tendulkar">
+										<i class="fa fa-search"></i>
+									</a>
 
-							<a href="" target="_blank" class="projectLink">
-								<i class="fa fa-link"></i>
-							</a>
-						</div>
+									<a href="" target="_blank" class="projectLink">
+										<i class="fa fa-link"></i>
+									</a>
+								</div>
+								<div class="imageOverlay"></div>
+							</div>
+						</li>
 
-						 <div class="imageOverlay"></div>
+						<li onclick="" class="me col-xs-6 col-sm-4 col-md-3 col-lg-3">
+							<div class="item">
+								<img src="img/portfolio/thumbnails/Sachin-Squared.PNG">
+								<div class="icons">
+									<a href="img/portfolio/Sachin.jpg" title="View image" class="openButton" data-fancybox data-caption="This is a picture of me with the Legendary Cricketer, Sachin Tendulkar">
+										<i class="fa fa-search"></i>
+									</a>
 
-						</div>
-					</li>
+									<a href="" target="_blank" class="projectLink">
+										<i class="fa fa-link"></i>
+									</a>
+								</div>
+								<div class="imageOverlay"></div>
 
-		<li onclick="" class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3">
-			<div class="item">
-				<img src="">
-					<div class="icons">
-						<a href="" title="View image" class="openButton" data-fancybox data-caption="">
-							<i class="fa fa-search"></i>
-						</a>
+							</div>
+						</li>
 
-						<a href="" target="_blank" class="projectLink">
-							<i class="fa fa-link"></i>
-						</a>
-					</div>
+						<li onclick="" class="me col-xs-6 col-sm-4 col-md-3 col-lg-3">
+							<div class="item">
+								<img src="img/portfolio/thumbnails/Sachin-Squared.PNG">
+								<div class="icons">
+									<a href="img/portfolio/Sachin.jpg" title="View image" class="openButton" data-fancybox data-caption="This is a picture of me with the Legendary Cricketer, Sachin Tendulkar">
+										<i class="fa fa-search"></i>
+									</a>
 
-					<div class="imageOverlay"></div>
+									<a href="" target="_blank" class="projectLink">
+										<i class="fa fa-link"></i>
+									</a>
 
-					</div>
-				</li>
+								</div>
 
-		<li onclick="" class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3">
-			<div class="item">
-				<img src="">
-					<div class="icons">
-						<a href="" title="View image" class="openButton" data-fancybox data-caption="">
-							<i class="fa fa-search"></i>
-						</a>
+								<div class="imageOverlay"></div>
 
-						<a href="" target="_blank" class="projectLink">
-							<i class="fa fa-link"></i>
-						</a>
-					</div>
+							</div>
+						</li>
 
-					<div class="imageOverlay"></div>
+						<li onclick="" class="projects col-xs-6 col-sm-4 col-md-3 col-lg-3">
+							<div class="item">
+								<img src="img/portfolio/thumbnails/Sachin-Squared.PNG">
+								<div class="icons">
+									<a href="img/portfolio/Sachin.jpg" title="View image" class="openButton" data-fancybox data-caption="This is a picture of me with the Legendary Cricketer, Sachin Tendulkar">
+										<i class="fa fa-search"></i>
+									</a>
 
-					</div>
-				</li>
+									<a href="" target="_blank" class="projectLink">
+										<i class="fa fa-link"></i>
+									</a>
+								</div>
+
+								<div class="imageOverlay"></div>
+
+							</div>
+						</li>
+
+						<li onclick="" class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3">
+							<div class="item">
+								<img src="img/portfolio/thumbnails/Sachin-Squared.PNG">
+								<div class="icons">
+									<a href="img/portfolio/Sachin.jpg" title="View image" class="openButton" data-fancybox data-caption="This is a picture of me with the Legendary Cricketer, Sachin Tendulkar">
+										<i class="fa fa-search"></i>
+									</a>
+
+									<a href="" target="_blank" class="projectLink">
+										<i class="fa fa-link"></i>
+									</a>
+								</div>
+
+								<div class="imageOverlay"></div>
+
+							</div>
+						</li>
+
+						<li onclick="" class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3">
+							<div class="item">
+								<img src="img/portfolio/thumbnails/Sachin-Squared.PNG">
+								<div class="icons">
+									<a href="img/portfolio/Sachin.jpg" title="View image" class="openButton" data-fancybox data-caption="This is a picture of me with the Legendary Cricketer, Sachin Tendulkar">
+										<i class="fa fa-search"></i>
+									</a>
+
+									<a href="" target="_blank" class="projectLink">
+										<i class="fa fa-link"></i>
+									</a>
+								</div>
+
+								<div class="imageOverlay"></div>
+
+							</div>
+						</li>
 
 
-				  </ul>
+					</ul>
 
 				</div>
 
@@ -452,13 +457,19 @@
 
 	</div>
 
-	<div class="copyrightSection">
 
-		<div class="col-md-12 text-center">
-			<p>&copy; Copyright Rahul Nagarajan 2020</p>
-		<div>
+	<footer class="section">
+		<div class="container">
+			<p>&copy; 2020 Rahul Nagarajan</p>
+			<ul>
+				<li><a target="_blank" class="facebook" href="https://www.facebook.com/additya.nagarajan/"></a></li>
+				<li><a target="_blank" class="google" href="https://plus.google.com/110579255915399754170"></a></li>
+				<li><a target="_blank" class="instagram" href="https://www.instagram.com/rahul_sovereign/"></a></li>
+				<li><a target="_blank" class="linkedin" href="https://www.linkedin.com/in/rahul-nagarajan-5b9765193/"></a></li>
 
-	</div>
+			</ul>
+		</div>
+	</footer>
 
 
 	<script src="js/countUp.js"></script>
@@ -474,4 +485,5 @@
 	<script src="js/script.js"></script>
 
 </body>
+
 </html>
