--- a/index.html
+++ b/index.html
@@ -342,13 +342,13 @@
 
 						<li onclick="" class="projects col-xs-6 col-sm-4 col-md-3 col-lg-3">
 							<div class="item">
-								<img src="img/portfolio/thumbnails/Sachin-Squared.PNG">
+								<img src="https://img.etimg.com/thumb/msid-74930234,width-640,resizemode-4,imgsize-243717/coronavirus-and-covid-19.jpg">
 								<div class="icons">
-									<a href="img/portfolio/Sachin.jpg" title="View image" class="openButton" data-fancybox data-caption="This is a picture of me with the Legendary Cricketer, Sachin Tendulkar">
+									<a href="https://img.etimg.com/thumb/msid-74930234,width-640,resizemode-4,imgsize-243717/coronavirus-and-covid-19.jpg" title="View image" class="openButton" data-fancybox data-caption="This project provides insightful visuals regarding COVID-19 impact">
 										<i class="fa fa-search"></i>
 									</a>
 
-									<a href="" target="_blank" class="projectLink">
+									<a href="https://github.com/Rahul2K20/Project/blob/master/covid19%20data%20analysis%20notebook.ipynb" target="_blank" class="projectLink">
 										<i class="fa fa-link"></i>
 									</a>
 								</div>
