--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 				<div class="itemsContainer">
 					<ul class="items">
 
-						<li onclick="" class="projects col-xs-6 col-sm-4 col-md-3 col-lg-3">
+						<li onclick="" class="me col-xs-6 col-sm-4 col-md-3 col-lg-3">
 							<div class="item">
 								<img src="img/portfolio/thumbnails/Sachin-Squared.PNG">
 								<div class="icons">
