--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
 							<div class="item">
 								<img src="https://img.etimg.com/thumb/msid-74930234,width-640,resizemode-4,imgsize-243717/coronavirus-and-covid-19.jpg">
 								<div class="icons">
-									<a href="https://img.etimg.com/thumb/msid-74930234,width-640,resizemode-4,imgsize-243717/coronavirus-and-covid-19.jpg" title="View image" class="openButton" data-fancybox data-caption="This project provides insightful visuals regarding COVID-19 impact">
+									<a href="https://i.ibb.co/RvS9X8P/Capture.png" title="View image" class="openButton" data-fancybox data-caption="This project provides insightful visuals regarding COVID-19 impact">
 										<i class="fa fa-search"></i>
 									</a>
 
