--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 		<div class="collapse navbar-collapse" id="navbarNav">
 
 			<ul class="navbar-nav">
-				<li class="nav-item active">
-					<a class="nav-link" href="#about">ABOUT <span class="sr-only">(current)</span></a>
+				<li class="nav-item">
+					<a class="nav-link" href="#about">ABOUT</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#skills">SKILLS</a>
