--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 				<p class="main">RAHUL NAGARAJAN</p>
 				<p class="sub typed"></p>
 			</div>
+			<a href="#about" class="borderBtn scrollto">MORE ABOUT ME</a>
 		</div>
 
 
