--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 
 			<p class="subHeading">Like what you see?</p>
 			<h2>I'd love to hear from you!</h2>
-			<a href="Final Resume.docx" download class="contactButton">DOWNLOAD RESUME</a>
+			<a href="Resume.pdf" download class="contactButton">DOWNLOAD RESUME</a>
 			<a href="mailTo:additya.nagarajan@gmail.com" class="contactButton">GET IN TOUCH!</a>
 
 		</div>
