--- a/index.html
+++ b/index.html
@@ -314,6 +314,7 @@
 					<ul id="filters">
 						<li> <a href="#" data-filter="*" class="current">ALL</a> </li>
 						<li> <a href="#" data-filter=".projects">Projects</a> </li>
+						<li> <a href="#" data-filter=".research">Research</a> </li>
 						<li> <a href="#" data-filter=".me">Me</a> </li>
 
 					</ul>
