--- a/index.html
+++ b/index.html
@@ -99,13 +99,25 @@
 				<div class="col-md-7">
 
 
-					<h4>My name is Rahul Nagarajan</h4>
+					<h4>ABOUT ME</h4>
 
 					<p>Hey there! I'm Rahul Nagarajan from Tamil Nadu, India. I am a final year college student (8.5 CGPA, B.TECH in Computer Science & Engineering) at SRM Institute of Science & Technology.</p>
-					<p> During the course of my academic career, I also managed to accrue nearly 5 months of work experience. I had the privilege of working for AEGIS INFO BUSINESS SOLUTIONS PVT. LTD. as a business analyst, where I learned valuable
-						professional skills such as problem solving and business intelligence. I also worked for Internshala (ISP 17) as a student partner/campus ambassador where I successfully marketed Internshala’s platform and associated products. I also
-						bagged several performance-based rewards and cash incentives. I'm currently working for Zolo Stays as a sales intern. In both my academic and professional life, I have been consistently praised as hard-working by my professors and peers.
-						Whether working on academic, extracurricular, or professional projects, I apply proven communication, lucrative thinking and leadership skills to get the job done effectively.</p>
+
+					<strong>Academic Achievements</strong>
+					<ul>
+						<li>Sixth Semester: SGPA of 9.889</li>
+						<li>Seventh Semester: SGPA of 9.889 (Class Topper)</li>
+						<li>Published a research paper on International Journal of Recent Technology and Engineering (IJRTE)</li>
+						<li>IELTS: Overall 7.0 | L 7.5 R 7.0 W 6.5 | CEFR C1</li>
+					</ul>
+
+					<strong>Extracurricular Activities</strong>
+					<ul>
+						<li>HackerRank Certification: Basic Problem Solving</li>
+						<li>HackerRank &#9733; &#9733; &#9733; &#9733; &#9733; Problem Solver</li>
+						<li>Secured 2nd position in a national level HTML quiz conducted by CodeCarona</li>
+						<li>Cleared Google Kickstart Round C : Rank 8879</li>
+					</ul>
 
 				</div>
 
