--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
 			<p>&copy; 2021 Rahul Nagarajan</p>
 			<ul>
 				<li><a target="_blank" class="facebook" href="https://www.facebook.com/additya.nagarajan/"></a></li>
-				<li><a target="_blank" class="instagram" href="https://www.instagram.com/rahul_sovereign/"></a></li>
+				<li><a target="_blank" class="instagram" href="https://www.instagram.com/irahul.n/"></a></li>
 				<li><a target="_blank" class="linkedin" href="https://www.linkedin.com/in/rahul-nagarajan-5b9765193/"></a></li>
 
 			</ul>
