--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 			<img src="img/slide1.jpg" alt="">
 			<img src="img/slide2.jpeg" alt="">
 			<img src="img/slide3.jpeg" alt="">
+			<img src="img/slide4.jpeg" alt="">
 		</div>
 
 		<div class="titleMessage">
@@ -452,7 +453,7 @@
 
 	<footer class="section">
 		<div class="container">
-			<p>&copy; 2021 Rahul Nagarajan</p>
+			<p>&copy; 2022 Rahul Nagarajan</p>
 			<ul>
 				<li><a target="_blank" class="facebook" href="https://www.facebook.com/additya.nagarajan/"></a></li>
 				<li><a target="_blank" class="instagram" href="https://www.instagram.com/irahul.n/"></a></li>
