--- a/index.html
+++ b/index.html
@@ -423,6 +423,22 @@
 						
 						<li onclick="" class="projects col-xs-6 col-sm-4 col-md-3 col-lg-3">
 							<div class="item">
+								<img src="https://wallpaperaccess.com/full/1290999.jpg">
+								<div class="icons">
+									<a href="https://i.ibb.co/mhySPwt/dota.png" title="View image" class="openButton" data-fancybox data-caption="DOTA 2 Hero Recommendation System, via Apriori Algorithm and Multi-Layer Perceptron Neural Network">
+										<i class="fa fa-search"></i>
+									</a>
+
+									<a href="https://github.com/Rahul2K20/DOTA-2-Hero-Recommendation-System" target="_blank" class="projectLink">
+										<i class="fa fa-link"></i>
+									</a>
+								</div>
+								<div class="imageOverlay"></div>
+							</div>
+						</li>
+						
+						<li onclick="" class="projects col-xs-6 col-sm-4 col-md-3 col-lg-3">
+							<div class="item">
 								<img src="https://miro.medium.com/max/875/1*sDhYPhYi3B9_6i37zZNOHw.png">
 								<div class="icons">
 									<a href="https://i.ibb.co/pJDjpFt/Capture.png" title="View image" class="openButton" data-fancybox data-caption="This is the final project done under the guidance of a course offered by Google">
