--- a/index.html
+++ b/index.html
@@ -153,6 +153,15 @@
 						<h4>C++</h4>
 						<p>Novice Competitive Programmer</p>
 					</div>
+					
+					<div class="skill">
+						<span class="chart" data-percent="40">
+							<span class="percent">48</span>
+							<canvas height="152" width="152"></canvas>
+						</span>
+						<h4>Python</h4>
+						<p>Novice</p>
+					</div>
 
 
 					<div class="skill">
