--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
 				<li><a target="_blank" class="facebook" href="https://www.facebook.com/additya.nagarajan/"></a></li>
 				<li><a target="_blank" class="instagram" href="https://www.instagram.com/irahul.n/"></a></li>
 				<li><a target="_blank" class="linkedin" href="https://www.linkedin.com/in/rahul-nagarajan-5b9765193/"></a></li>
-				<li><a target="_blank" class="github" href="https://www.linkedin.com/in/rahul-nagarajan-5b9765193/"></a></li>
+				<li><a target="_blank" class="github" href="https://github.com/Rahul2K20"></a></li>
 
 			</ul>
 		</div>
