--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-12 text-center">
-					<img class="aboutImage" src="img/about.PNG">
+					<img class="aboutImage" src="img/about.png">
 				</div>
 			</div>
 			<div class="row">
