--- a/index.html
+++ b/index.html
@@ -396,9 +396,9 @@
 
 						<li onclick="" class="research col-xs-6 col-sm-4 col-md-3 col-lg-3">
 							<div class="item">
-								<img src="https://i.ibb.co/V3mvPH9/ieee.png">
+								<img src="https://i.ibb.co/RYfnVgB/eeg.png">
 								<div class="icons">
-									<a href="https://i.ibb.co/RYfnVgB/eeg.png" title="View image" class="openButton" data-fancybox data-caption="The project serves to decipher American Sign Language (ASL) visuals and convert it to textual (English) format such that words or entire sentences can be obtained.">
+									<a href="https://i.ibb.co/V3mvPH9/ieee.png" title="View image" class="openButton" data-fancybox data-caption="The project serves to decipher American Sign Language (ASL) visuals and convert it to textual (English) format such that words or entire sentences can be obtained.">
 										<i class="fa fa-search"></i>
 									</a>
 
