--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
 						HackerRank Certification: Basic Problem Solving <br>
 						HackerRank &#9733; &#9733; &#9733; &#9733; &#9733; Problem Solver <br>
 						AWS Certified Cloud Practitioner
+						AWS Certified Developer Associate 
 						
 					</ul>
 				</div>
