--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 						<br>
 						Research Assistant at Cal Poly Pomona's Poly Sec Lab
 						<br>
-						Currently a Data Engineer at People Tech Group
+						Currently builing Generative AI Applications at People Tech Group 
 	
 					</ul>
 					<strong>Extracurricular Activities</strong>
@@ -113,7 +113,7 @@
 						Second Place, National HTML5 Quiz, Code Corona Event by Skillenza, 2023. Competed with participants from numerous engineering colleges across India. <br>
 						HackerRank Certification: Basic Problem Solving <br>
 						HackerRank &#9733; &#9733; &#9733; &#9733; &#9733; Problem Solver <br>
-						AWS Certified Cloud Practitioner
+						AWS Certified Cloud Practitioner <br>
 						AWS Certified Developer Associate 
 						
 					</ul>
@@ -156,6 +156,33 @@
 						</span>
 						<h4>Python</h4>
 						<p>High Proficiency</p>
+					</div>
+
+					<div class="skill">
+						<span class="chart" data-percent="90">
+							<span class="percent">80</span>
+							<canvas height="152" width="152"></canvas>
+						</span>
+						<h4>Generative AI</h4>
+						<p>High proficiency</p>
+					</div>
+
+					<div class="skill">
+						<span class="chart" data-percent="90">
+							<span class="percent">85</span>
+							<canvas height="152" width="152"></canvas>
+						</span>
+						<h4>FastAPI</h4>
+						<p>High proficiency</p>
+					</div>
+
+					<div class="skill">
+						<span class="chart" data-percent="40">
+							<span class="percent">45</span>
+							<canvas height="152" width="152"></canvas>
+						</span>
+						<h4>Flask</h4>
+						<p>Novice</p>
 					</div>
 
 
