--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 		<div class="slides-container">
 			<img src="img/slide1.jpg" alt="">
-			<img src="img/slide2.jpeg" alt="">
+			<img src="img/slide2.jpg" alt="">
 			<img src="img/slide3.jpeg" alt="">
 			<img src="img/slide4.jpeg" alt="">
 		</div>
