--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 				</div>
 
 
-				<div class="owl-carousel owl-theme">
+				<div id="owl-slideshow" class="owl-carousel owl-theme">
 
 					<div class="skill">
 						<span class="chart" data-percent="70">
