--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 						HackerRank &#9733; &#9733; &#9733; &#9733; &#9733; Problem Solver <br>
 						AWS Certified Cloud Practitioner <br>
 						AWS Certified Developer Associate 
-						
+						Microsoft Certified: Azure AI Engineer Associate
 					</ul>
 				</div>
 			</div>
@@ -577,6 +577,22 @@
 									</a>
 
 									<a href="https://aws.amazon.com/certification/certified-developer-associate/" target="_blank" class="projectLink">
+										<i class="fa fa-link"></i>
+									</a>
+								</div>
+								<div class="imageOverlay"></div>
+							</div>
+						</li>
+
+						<li onclick="" class="certifications col-xs-6 col-sm-4 col-md-3 col-lg-3">
+							<div class="item">
+								<img src="https://miro.medium.com/v2/resize:fit:720/format:webp/1*OtoFLnKYYOP9VUeiOxWfNQ.jpeg">
+								<div class="icons">
+									<a href="https://learn.microsoft.com/api/credentials/share/en-us/RahulNagarajan-7689/4A28FF38A5A49FC4?sharingId=2E90A2E5823DFFEC" title="View image" class="openButton" data-fancybox data-caption="Showcases ability to design, implement, and manage AI solutions using Azure's machine learning and cognitive services.">
+										<i class="fa fa-search"></i>
+									</a>
+
+									<a href="https://learn.microsoft.com/en-us/credentials/certifications/azure-ai-engineer/?practice-assessment-type=certification" target="_blank" class="projectLink">
 										<i class="fa fa-link"></i>
 									</a>
 								</div>
