--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 						HackerRank Certification: Basic Problem Solving <br>
 						HackerRank &#9733; &#9733; &#9733; &#9733; &#9733; Problem Solver <br>
 						AWS Certified Cloud Practitioner <br>
-						AWS Certified Developer Associate 
+						AWS Certified Developer Associate <br>
 						Microsoft Certified: Azure AI Engineer Associate
 					</ul>
 				</div>
