--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<title>Rahul Nagarajan</title>
+	<link rel="icon" href="https://i.ibb.co/3kgJgP4/We-re-removebg-preview.png"type="image/x-icon" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="initial-scale = 1, maximum-scale = 1, user-scalable = no, width = device-width" />
 	<link rel="stylesheet" type="text/css" href="css/superslides.css">
