--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<title>Rahul Nagarajan</title>
-	<link rel="icon" href="https://i.ibb.co/K04k3XR/pixelcut-export.png" sizes ="128x128" type="image/png" />
+	<link rel="icon" href="https://i.ibb.co/MnZ11Fj/favicon.png" sizes ="128x128" type="image/png" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="initial-scale = 1, maximum-scale = 1, user-scalable = no, width = device-width" />
 	<link rel="stylesheet" type="text/css" href="css/superslides.css">
