--- a/index.html
+++ b/index.html
@@ -287,8 +287,8 @@
 							</div>
 
 							<div class="squareContent">
-								<h2 class="counter">57</h2>
-								<h3>LeetCode Problems Solved</h3>
+								<h2 class="counter">0</h2>
+								<h3>Gen AI Experience Days</h3>
 							</div>
 
 						</div>
