--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
 							<div class="item">
 								<img src="https://miro.medium.com/v2/resize:fit:720/format:webp/1*OtoFLnKYYOP9VUeiOxWfNQ.jpeg">
 								<div class="icons">
-									<a href="https://learn.microsoft.com/api/credentials/share/en-us/RahulNagarajan-7689/4A28FF38A5A49FC4?sharingId=2E90A2E5823DFFEC" title="View image" class="openButton" data-fancybox data-caption="Showcases ability to design, implement, and manage AI solutions using Azure's machine learning and cognitive services.">
+									<a href="https://i.ibb.co/7dMHpcwR/AI-102.png" title="View image" class="openButton" data-fancybox data-caption="Showcases ability to design, implement, and manage AI solutions using Azure's machine learning and cognitive services.">
 										<i class="fa fa-search"></i>
 									</a>
 
